--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "**/*.jsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "@types"
-, "components/Auth.jsx"  ]
+    "@types"]
 }
